fix/bugs (#34)
* feat: Add project info to carousel

* style: Style carousel component

* feat: Add project info to carousel

* style: Style carousel component

* refactor: Implement method scrollToTop

* chore: Import laptop image in assets

* fix: Update laptop image import

* feat: Add hero-bg-img to variables

* style: Hide scrollbar

* style: Update font sizes

* style: Style components

* refactor: Restructure component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,8 +34,23 @@
   }
 }
 
+@keyframes blink {
+  0% {
+    background-color: unset;
+    color: inherit;
+  }
+  50% {
+    background-color: $white;
+    color: $black;
+  }
+  100% {
+    background-color: $gray;
+    color: $black;
+  }
+}
+
 * {
-  background-color: $bg-color;
+  background-color: $black;
   font-family: $font-family;
   margin: 0;
   padding: 0;
@@ -46,7 +61,12 @@ html {
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   color: $white;
+  overflow: auto;
 }
 
